positioned top right and added jqueryui

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="_pendo-tag-assistant_" class="container _pendo-topcorner_">
   <div id="header-div">
     <table width="100%">
       <tr>
