Copied changes from Mike's master

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -1,8 +1,8 @@
-<div id="_pendo-tag-assistant_" class="container _pendo-topcorner_">
+<div class="container" id="_pendota-tag-assistant_">
   <div id="header-div">
     <table width="100%">
       <tr>
-        <td width="5%"><img width=20 id="_pendo-target-img_" src="./pendo_target.png"></td>
+        <td width="5%"><img width="40" id="_pendota-target-img_" src="./pendo_target.png"></td>
         <td width="95%" id="title"><h3>Pendo Tagging Aid</h3></td>
       </tr>
     </table>
@@ -18,7 +18,7 @@
         <td width="2%">&nbsp;</td>
         <td width="8%">
           <div onclick="copyToClipboard('type-result');">
-            <a href="#"><img class="_pendo-copy-icon_" src="./copy_icon.ico" width="20"></a>
+            <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
       </tr>
@@ -33,7 +33,7 @@
         <td width="2%">&nbsp;</td>
         <td width="8%">
           <div onclick="copyToClipboard('id-result', '#');">
-            <a href="#"><img class="_pendo-copy-icon_" src="./copy_icon.ico" width="20"></a>
+            <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
       </tr>
@@ -47,7 +47,7 @@
         <td width="2%" class="input-row">&nbsp;</td>
         <td width="8%" class="input-row">
           <div onclick="copyToClipboard('class-result-0', '.');">
-            <a href="#"><img class="_pendo-copy-icon_" src="./copy_icon.ico" width="20"></a>
+            <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
       </tr>
