incomplete css fixup

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -1,58 +1,58 @@
-<div class="container" id="_pendota-tag-assistant_">
-  <div id="header-div">
+<div class="_pendota_container_" id="_pendota-tag-assistant_">
+  <div id="_pendota_header-div_">
     <table width="100%">
       <tr>
         <td width="5%"><img width="40" id="_pendota-target-img_" src="./pendo_target.png"></td>
-        <td width="95%" id="title"><h3>Pendo Tagging Aid</h3></td>
+        <td width="95%" id="_pendota_title_"><h3 class="_pendota_">Pendo Tagging Aid</h3></td>
       </tr>
     </table>
-    <p id="status"></p>
+    <p id="_pendota_status_"></p>
   </div>
-  <div id="id-header">
-    <h5>Element Type:</h5>
+  <div class="_pendota_row-header_">
+    <h5 class="_pendota_">Element Type:</h5>
   </div>
-  <div class="form-group">
+  <div class="_pendota_form-group_">
     <table width="100%">
       <tr>
-        <td width="90%"><input class="form-control" type="text" id="type-result" value="" readonly></td>
+        <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_type-result_" value="" readonly></td>
         <td width="2%">&nbsp;</td>
         <td width="8%">
-          <div onclick="copyToClipboard('type-result');">
+          <div onclick="copyToClipboard('_pendota_type-result_');">
             <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
       </tr>
     </table>
-  <div id="id-header">
-    <h5>Element ID:</h5>
+  <div class="_pendota_row-header_">
+    <h5 class="_pendota_">Element ID:</h5>
   </div>
-  <div class="form-group">
+  <div class="_pendota_form-group_">
     <table width="100%">
       <tr>
-        <td width="90%"><input class="form-control" type="text" id="id-result" value="" readonly></td>
+        <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value="" readonly></td>
         <td width="2%">&nbsp;</td>
         <td width="8%">
-          <div onclick="copyToClipboard('id-result', '#');">
+          <div onclick="copyToClipboard('_pendota_d-result_', '#');">
             <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
       </tr>
     </table>
-    <div id="class-header">
-        <h5>Element Class Names:</h5>
+    <div class="_pendota_row-header_">
+        <h5 class="_pendota_">Element Class Names:</h5>
     </div>
     <table width="100%">
       <tr>
-        <td width="90%" class="input-row"><input class="form-control class-result" type="text" value="" id="class-result-0" readonly></td>
-        <td width="2%" class="input-row">&nbsp;</td>
-        <td width="8%" class="input-row">
-          <div onclick="copyToClipboard('class-result-0', '.');">
+        <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_" type="text" value="" id="_pendota_class-result-0_" readonly></td>
+        <td width="2%" class="_pendota_input-row_">&nbsp;</td>
+        <td width="8%" class="_pendota_input-row_">
+          <div onclick="copyToClipboard('_pendota_class-result-0_', '.');">
             <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
       </tr>
     </table>
-    <table width="100%" id="template-table"></table>  
+    <table width="100%" id="_pendota_template-table_"></table>  
   </div>
   
 </div>
