--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -17,7 +17,7 @@
         <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_type-result_" value="" readonly></td>
         <td width="2%">&nbsp;</td>
         <td width="8%">
-          <div onclick="copyToClipboard('_pendota_type-result_');">
+          <div onclick="copyToClipboard(e, '_pendota_type-result_');">
             <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
@@ -32,7 +32,7 @@
         <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value="" readonly></td>
         <td width="2%">&nbsp;</td>
         <td width="8%">
-          <div onclick="copyToClipboard('_pendota_d-result_', '#');">
+          <div onclick="copyToClipboard(e, '_pendota_d-result_', '#');">
             <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
@@ -46,7 +46,7 @@
         <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_" type="text" value="" id="_pendota_class-result-0_" readonly></td>
         <td width="2%" class="_pendota_input-row_">&nbsp;</td>
         <td width="8%" class="_pendota_input-row_">
-          <div onclick="copyToClipboard('_pendota_class-result-0_', '.');">
+          <div onclick="copyToClipboard(e, '_pendota_class-result-0_', '.');">
             <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
           </div>
         </td>
