--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -1,4 +1,4 @@
-<div class="_pendota_container_" id="_pendota-tag-assistant_">
+<div class="_pendota_container_ _pendota-draggable_" id="_pendota-tag-assistant_">
   <div id="_pendota_header-div_">
     <table width="100%">
       <tr>
