added lock icon

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -6,7 +6,10 @@
         <td width="95%" id="_pendota_title_"><h3 class="_pendota_">Pendo Tagging Aid</h3></td>
       </tr>
     </table>
-    <p id="_pendota_status_"></p>
+    <span id="_pendota-lock-icon_">
+      <i class="_pendota-feather-locked_" data-feather="unlock"></i>
+    </span>
+    <span id="_pendota_status_"></span>
   </div>
   <div class="_pendota_row-header_">
     <h5 class="_pendota_">Element Type:</h5>
