--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -1,60 +1,62 @@
-<div class="_pendota_container_ _pendota-draggable_" id="_pendota-tag-assistant_">
-  <div id="_pendota_header-div_">
-    <table width="100%">
-      <tr>
-        <td width="5%"><img width="40" id="_pendota-target-img_" src="./pendo_target.png"></td>
-        <td width="95%" id="_pendota_title_"><h3 class="_pendota_">Pendo Tagging Aid</h3></td>
-      </tr>
-    </table>
-    <span id="_pendota-lock-icon_">
-      <i class="_pendota-feather-locked_" data-feather="unlock"></i>
-    </span>
-    <span id="_pendota_status_"></span>
-  </div>
-  <div class="_pendota_row-header_">
-    <h5 class="_pendota_">Element Type:</h5>
-  </div>
-  <div class="_pendota_form-group_">
-    <table width="100%">
-      <tr>
-        <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_type-result_" value="" readonly></td>
-        <td width="2%">&nbsp;</td>
-        <td width="8%">
-          <div id='_pendota_type-result_' class="_pendota-copy-link_">
-            <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
-          </div>
-        </td>
-      </tr>
-    </table>
-  <div class="_pendota_row-header_">
-    <h5 class="_pendota_">Element ID:</h5>
-  </div>
-  <div class="_pendota_form-group_">
-    <table width="100%">
-      <tr>
-        <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value="" readonly></td>
-        <td width="2%">&nbsp;</td>
-        <td width="8%">
-          <div id='_pendota_id-result_' class="_pendota-copy-link_">
-            <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
-          </div>
-        </td>
-      </tr>
-    </table>
-    <div class="_pendota_row-header_">
-        <h5 class="_pendota_">Element Class Names:</h5>
+<div id="_pendota-wrapper_">
+  <div class="_pendota_container_ _pendota-draggable_" id="_pendota-tag-assistant_">
+    <div id="_pendota_header-div_">
+      <table width="100%">
+        <tr>
+          <td width="5%"><img width="30" id="_pendota-target-img_" src="./pendo_target.png"></td>
+          <td width="95%" id="_pendota_title_"><h3 class="_pendota_">Pendo Tagging Aid</h3></td>
+        </tr>
+      </table>
+      <span id="_pendota-lock-icon_">
+        <i class="_pendota-feather-locked_" data-feather="unlock"></i>
+      </span>
+      <span id="_pendota_status_"></span>
     </div>
-    <table width="100%">
-      <tr>
-        <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_" type="text" value="" id="_pendota_class-result-0_" readonly></td>
-        <td width="2%" class="_pendota_input-row_">&nbsp;</td>
-        <td width="8%" class="_pendota_input-row_">
-          <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
-            <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
-          </div>
-        </td>
-      </tr>
-    </table>
-    <table width="100%" id="_pendota_template-table_"></table>  
+    <div class="_pendota_row-header_">
+      <h5 class="_pendota_">Element Type:</h5>
+    </div>
+    <div class="_pendota_form-group_">
+      <table width="100%">
+        <tr>
+          <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_type-result_" value="" readonly></td>
+          <td width="2%">&nbsp;</td>
+          <td width="8%">
+            <div id='_pendota_type-result_' class="_pendota-copy-link_">
+              <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
+            </div>
+          </td>
+        </tr>
+      </table>
+    <div class="_pendota_row-header_">
+      <h5 class="_pendota_">Element ID:</h5>
+    </div>
+    <div class="_pendota_form-group_">
+      <table width="100%">
+        <tr>
+          <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value="" readonly></td>
+          <td width="2%">&nbsp;</td>
+          <td width="8%">
+            <div id='_pendota_id-result_' class="_pendota-copy-link_">
+              <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
+            </div>
+          </td>
+        </tr>
+      </table>
+      <div class="_pendota_row-header_">
+          <h5 class="_pendota_">Element Class Names:</h5>
+      </div>
+      <table width="100%">
+        <tr>
+          <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_" type="text" value="" id="_pendota_class-result-0_" readonly></td>
+          <td width="2%" class="_pendota_input-row_">&nbsp;</td>
+          <td width="8%" class="_pendota_input-row_">
+            <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
+              <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
+            </div>
+          </td>
+        </tr>
+      </table>
+      <table width="100%" id="_pendota_template-table_"></table>  
+    </div>
   </div>
 </div>
