--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -4,9 +4,10 @@
       <table width="100%">
         <tr>
           <td width="5%"><img width="30" id="_pendota-target-img_" src="./pendo_target.png"></td>
-          <td width="95%" id="_pendota_title_">
+          <td width="97%" id="_pendota_title_">
             <h3 class="_pendota_">Pendo Tagging Aid</h3>
           </td>
+          <td width="3%" id="_pendota_exit_img_container_"><div><i id="_pendota_exit_img_" data-feather="x"></i><div></td>
         </tr>
       </table>
       <span id="_pendota-lock-icon_">
@@ -26,7 +27,7 @@
           <td width="2%">&nbsp;</td>
           <td width="8%">
             <div id='_pendota_type-result_' class="_pendota-copy-link_">
-              <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
+              <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
             </div>
           </td>
         </tr>
@@ -42,7 +43,7 @@
             <td width="2%">&nbsp;</td>
             <td width="8%">
               <div id='_pendota_id-result_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
+                <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
               </div>
             </td>
           </tr>
@@ -57,7 +58,7 @@
             <td width="2%" class="_pendota_input-row_">&nbsp;</td>
             <td width="8%" class="_pendota_input-row_">
               <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" src="./copy_icon.ico" width="20"></a>
+                <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
               </div>
             </td>
           </tr>
