Shrunk window, tweaked more CSS.

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -10,10 +10,18 @@
           <td width="3%" id="_pendota_exit_img_container_"><div><i id="_pendota_exit_img_" data-feather="x"></i><div></td>
         </tr>
       </table>
-      <span id="_pendota-lock-icon_">
-        <i class="_pendota-feather-locked_" data-feather="unlock"></i>
-      </span>
-      <span id="_pendota_status_"></span>
+      <table width="100%">
+        <tr>
+          <td width="5%">
+            <div id="_pendota-lock-icon_">
+              <i class="_pendota-feather-locked_" data-feather="unlock"></i>
+            </div>
+          </td>
+          <td width="90%">
+              <div id="_pendota_status_"></div>
+          </td>
+        </tr>
+      </table>
     </div>
     <div class="_pendota_row-header_">
       <h5 class="_pendota_">Element Type:</h5>
