added clickability to lock icon for unlocking

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -13,7 +13,7 @@
       <table width="100%">
         <tr>
           <td width="5%">
-            <div id="_pendota-lock-icon_">
+            <div id="_pendota-lock-icon_" class="_pendota-icon-locked_">
               <i class="_pendota-feather-locked_" data-feather="unlock"></i>
             </div>
           </td>
