quickbase custom branch

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -40,38 +40,56 @@
           </td>
         </tr>
       </table>
-      <div class="_pendota_row-header_">
-        <h5 class="_pendota_">Element ID:</h5>
-      </div>
-      <div class="_pendota_form-group_">
-        <table width="100%">
-          <tr>
-            <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value=""
-                readonly></td>
-            <td width="2%">&nbsp;</td>
-            <td width="8%">
-              <div id='_pendota_id-result_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
-              </div>
-            </td>
-          </tr>
-        </table>
-        <div class="_pendota_row-header_">
-          <h5 class="_pendota_">Element Class Names:</h5>
-        </div>
-        <table width="100%">
-          <tr>
-            <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_"
-                type="text" value="" id="_pendota_class-result-0_" readonly></td>
-            <td width="2%" class="_pendota_input-row_">&nbsp;</td>
-            <td width="8%" class="_pendota_input-row_">
-              <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
-              </div>
-            </td>
-          </tr>
-        </table>
-        <table width="100%" id="_pendota_template-table_"></table>
-      </div>
     </div>
+    <div class="_pendota_row-header_">
+      <h5 class="_pendota_">Data Test ID:</h5>
+    </div>
+    <div class="_pendota_form-group_">
+      <table width="100%">
+        <tr>
+          <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_data-test-result_" value=""
+              readonly></td>
+          <td width="2%">&nbsp;</td>
+          <td width="8%">
+            <div id='data-test-result_' class="_pendota-copy-link_">
+              <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="_pendota_row-header_">
+      <h5 class="_pendota_">Element ID:</h5>
+    </div>
+    <div class="_pendota_form-group_">
+      <table width="100%">
+        <tr>
+          <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value=""
+              readonly></td>
+          <td width="2%">&nbsp;</td>
+          <td width="8%">
+            <div id='_pendota_id-result_' class="_pendota-copy-link_">
+              <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="_pendota_row-header_">
+      <h5 class="_pendota_">Element Class Names:</h5>
+    </div>
+    <table width="100%">
+      <tr>
+        <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_"
+            type="text" value="" id="_pendota_class-result-0_" readonly></td>
+        <td width="2%" class="_pendota_input-row_">&nbsp;</td>
+        <td width="8%" class="_pendota_input-row_">
+          <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
+            <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
+          </div>
+        </td>
+      </tr>
+    </table>
+    <table width="100%" id="_pendota_template-table_"></table>
   </div>
+</div>
