--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -51,7 +51,7 @@
               readonly></td>
           <td width="2%">&nbsp;</td>
           <td width="8%">
-            <div id='data-test-result_' class="_pendota-copy-link_">
+            <div id='_pendota_data-test-result_' class="_pendota-copy-link_">
               <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
             </div>
           </td>
