- added sizzle tester input - made it so the outline does not appear on the pendota box

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -23,6 +23,14 @@
         </tr>
       </table>
     </div>
+    <div class="_pendota-form-group_">
+      <table width="100%">
+        <tr>
+          <td width="80%"><input class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" placeholder="Test a selector...">
+          </td>
+        </tr>
+      </table>
+    </div>
     <div class="_pendota_row-header_">
       <h5 class="_pendota_">Element Type:</h5>
       <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_"><i data-feather="arrow-up" id="_pendota-feather-up-arrow_" class="_pendota-parent-arrow_ _pendota-active-arrow_"></i></span><span id="_pendota-parent-down_" class="_pendota-hide-arrow_"><i id="_pendota-feather-down-arrow_" data-feather="arrow-down" class="_pendota-parent-arrow_ _pendota-disabled-arrow_"></i></span></div>
