--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -26,7 +26,7 @@
     <div class="_pendota-form-group_">
       <table width="100%">
         <tr>
-          <td width="83%"><input class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" placeholder="Test a selector...">
+          <td width="83%"><input class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector...">
             <td width="2%">&nbsp;</td>
           <td width="15%">
               <a href="#" id="_pendota-sizzler-icon_">Test</a>
