Small CSS fixes to spacing

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -28,7 +28,7 @@
         <tr>
           <td width="83%"><input class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector...">
             <td width="2%">&nbsp;</td>
-          <td width="15%">
+          <td width="15%" id="_pendota-button-fix_">
               <a href="#" id="_pendota-sizzler-icon_">Test</a>
           </td>
           </td>
