--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -27,7 +27,7 @@
       <table width="100%">
         <tr>
           <td width="75%"><form id="_pendota-sizzler-form_"><input class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form>
-          <td width="10%" id="_pendota-sizzler-count_"> (0) </td>
+          <td width="10%" id="_pendota-sizzler-count_"> -- </td>
           <td width="15%" id="_pendota-button-fix_">
               <a href="#" id="_pendota-sizzler-icon_">Test</a>
           </td>
