remove bootstrap, fixed height, div fixes

--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -68,9 +68,11 @@
             </td>
           </tr>
         </table>
-        <div class="_pendota_row-header_">
-          <h5 class="_pendota_">Element Class Names:</h5>
-        </div>
+      </div>
+      <div class="_pendota_row-header_">
+        <h5 class="_pendota_">Element Class Names:</h5>
+      </div>
+      <div class="_pendota_form-group_">
         <table width="100%">
           <tr>
             <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_"
