--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -1,3 +1,4 @@
+<div id="_pendota-wrapper_">
   <div class="_pendota_container_ _pendota-draggable_" id="_pendota-tag-assistant_">
     <div id="_pendota_header-div_">
       <table width="100%">
@@ -87,3 +88,4 @@
         <table width="100%" id="_pendota_template-table_"></table>
       </div>
     </div>
+  </div>
