--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -3,7 +3,7 @@
     <div id="_pendota_header-div_">
       <table width="100%">
         <tr>
-          <td width="5%"><img width="30" id="_pendota-target-img_" src="./pendo_target.png"></td>
+          <td width="5%"><img style="width:30px;" id="_pendota-target-img_" src="./pendo_target.png"></td>
           <td width="97%" id="_pendota_title_">
             <h3 class="_pendota_">Pendo Tagging Aid</h3>
           </td>
@@ -47,7 +47,7 @@
           <td width="2%">&nbsp;</td>
           <td width="8%">
             <div id='_pendota_type-result_' class="_pendota-copy-link_">
-              <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
+              <a href="#"><img class="_pendota-copy-icon_" style="width:20px;"></a>
             </div>
           </td>
         </tr>
@@ -63,7 +63,7 @@
             <td width="2%">&nbsp;</td>
             <td width="8%">
               <div id='_pendota_id-result_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
+                <a href="#"><img class="_pendota-copy-icon_" style="width:20px;""></a>
               </div>
             </td>
           </tr>
@@ -80,7 +80,7 @@
             <td width="2%" class="_pendota_input-row_">&nbsp;</td>
             <td width="8%" class="_pendota_input-row_">
               <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" width="20"></a>
+                <a href="#"><img class="_pendota-copy-icon_" style="width:20px;""></a>
               </div>
             </td>
           </tr>
