Styling changes made more narrow X is now a fixed floating button

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -4,12 +4,12 @@
       <table width="100%">
         <tr>
           <td width="5%"><img style="width:30px;" id="_pendota-target-img_" src="./pendo_target.png"></td>
-          <td width="97%" id="_pendota_title_">
+          <td width="95%" id="_pendota_title_">
             <h3 class="_pendota_">Pendo Tagging Aid</h3>
           </td>
-          <td width="3%" id="_pendota_exit_img_container_"><div><i id="_pendota_exit_img_" data-feather="x"></i><div></td>
         </tr>
       </table>
+      <div id="_pendota_exit_img_container_"><i id="_pendota_exit_img_" data-feather="x"></i></div>
       <table width="100%">
         <tr>
           <td width="5%">
@@ -26,7 +26,7 @@
     <div class="_pendota-form-group_">
       <table width="100%">
         <tr>
-          <td width="75%"><form id="_pendota-sizzler-form_"><input class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form>
+          <td width="75%"><form id="_pendota-sizzler-form_"><input no-drag class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form>
           <td width="10%" id="_pendota-sizzler-count_"> -- </td>
           <td width="15%" id="_pendota-button-fix_">
               <a href="#" id="_pendota-sizzler-icon_">Test</a>
@@ -42,7 +42,7 @@
     <div class="_pendota_form-group_">
       <table width="100%">
         <tr>
-          <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_type-result_" value=""
+          <td width="90%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_type-result_" value=""
               readonly></td>
           <td width="2%">&nbsp;</td>
           <td width="8%">
@@ -58,7 +58,7 @@
       <div class="_pendota_form-group_">
         <table width="100%">
           <tr>
-            <td width="90%"><input class="_pendota_form-control_" type="text" id="_pendota_id-result_" value=""
+            <td width="90%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_id-result_" value=""
                 readonly></td>
             <td width="2%">&nbsp;</td>
             <td width="8%">
@@ -75,7 +75,7 @@
       <div class="_pendota_form-group_">
         <table width="100%">
           <tr>
-            <td width="90%" class="_pendota_input-row_"><input class="_pendota_form-control_ _pendota_class-result_"
+            <td width="90%" class="_pendota_input-row_"><input no-drag class="_pendota_form-control_ _pendota_class-result_"
                 type="text" value="" id="_pendota_class-result-0_" readonly></td>
             <td width="2%" class="_pendota_input-row_">&nbsp;</td>
             <td width="8%" class="_pendota_input-row_">
