add to build functions are working

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -42,12 +42,17 @@
     <div class="_pendota_form-group_">
       <table width="100%">
         <tr>
-          <td width="90%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_type-result_" value=""
+          <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_type-result_" data-attr="type" data-rawvalue="" value=""
               readonly></td>
           <td width="2%">&nbsp;</td>
-          <td width="8%">
-            <div id='_pendota_type-result_' class="_pendota-copy-link_">
-              <a href="#"><img class="_pendota-copy-icon_" style="width:20px;"></a>
+          <td width="8%" class="_pendota_input-row_">
+            <div data-id='_pendota_type-result_' class="_pendota-addtobuild-btn_">
+              <a href="#"><img class="_pendota-addtobuild-icon_"></a>
+            </div>
+          </td>
+          <td width="8%" class="_pendota_input-row_">
+            <div data-id='_pendota_type-result_' class="_pendota-copy-link_">
+              <a href="#"><img class="_pendota-copy-icon_"></a>
             </div>
           </td>
         </tr>
@@ -58,12 +63,17 @@
       <div class="_pendota_form-group_">
         <table width="100%">
           <tr>
-            <td width="90%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_id-result_" value=""
+            <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_id-result_" data-attr="id" data-rawvalue="" value="#"
                 readonly></td>
             <td width="2%">&nbsp;</td>
-            <td width="8%">
-              <div id='_pendota_id-result_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" style="width:20px;""></a>
+            <td width="8%" class="_pendota_input-row_">
+              <div data-id='_pendota_id-result_' class="_pendota-addtobuild-btn_">
+                <a href="#"><img class="_pendota-addtobuild-icon_"></a>
+              </div>
+            </td>
+            <td width="8%" class="_pendota_input-row_">
+              <div data-id='_pendota_id-result_' class="_pendota-copy-link_">
+                <a href="#"><img class="_pendota-copy-icon_"></a>
               </div>
             </td>
           </tr>
@@ -75,12 +85,17 @@
       <div class="_pendota_form-group_">
         <table width="100%">
           <tr>
-            <td width="90%" class="_pendota_input-row_"><input no-drag class="_pendota_form-control_ _pendota_class-result_"
-                type="text" value="" id="_pendota_class-result-0_" readonly></td>
+            <td width="82%" class="_pendota_input-row_"><input no-drag class="_pendota_form-control_ _pendota_class-result_"
+                type="text" id="_pendota_class-result-0_" data-attr="class" data-rawvalue="" value="." readonly></td>
             <td width="2%" class="_pendota_input-row_">&nbsp;</td>
             <td width="8%" class="_pendota_input-row_">
-              <div id='_pendota_class-result-0_' class="_pendota-copy-link_">
-                <a href="#"><img class="_pendota-copy-icon_" style="width:20px;""></a>
+              <div data-id='_pendota_class-result-0_' class="_pendota-addtobuild-btn_">
+                <a href="#"><img class="_pendota-addtobuild-icon_"></a>
+              </div>
+            </td>
+            <td width="8%" class="_pendota_input-row_">
+              <div data-id='_pendota_class-result-0_' class="_pendota-copy-link_">
+                <a href="#"><img class="_pendota-copy-icon_"></a>
               </div>
             </td>
           </tr>
