lots of progress on tag builder

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -24,11 +24,11 @@
       </table>
     </div>
     <div class="_pendota-form-group_">
-      <table width="100%">
+      <table id="_pendota-tag-builder-table_" width="100%">
         <tr>
-          <td width="75%"><form id="_pendota-sizzler-form_"><input no-drag class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form>
+          <td width="75%"><div id="_pendota-tag-builder_"><div id="_pendota-auto-tags_"></div><form id="_pendota-sizzler-form_" class="_pendota-hidden_"><input no-drag class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form></div>
           <td width="10%" id="_pendota-sizzler-count_"> -- </td>
-          <td width="15%" id="_pendota-button-fix_">
+          <td width="15%">
               <a href="#" id="_pendota-sizzler-icon_">Test</a>
           </td>
           </td>
@@ -37,21 +37,21 @@
     </div>
     <div class="_pendota_row-header_">
       <h5 class="_pendota_">Element Type:</h5>
-      <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_"><i data-feather="arrow-up" id="_pendota-feather-up-arrow_" class="_pendota-parent-arrow_ _pendota-active-arrow_"></i></span><span id="_pendota-parent-down_" class="_pendota-hide-arrow_"><i id="_pendota-feather-down-arrow_" data-feather="arrow-down" class="_pendota-parent-arrow_ _pendota-disabled-arrow_"></i></span></div>
+      <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_"><i data-feather="arrow-up" id="_pendota-feather-up-arrow_" class="_pendota-parent-arrow_ _pendota-active-arrow_" title="Move to parent element"></i></span><span id="_pendota-parent-down_" class="_pendota-hide-arrow_"><i id="_pendota-feather-down-arrow_" data-feather="arrow-down" class="_pendota-parent-arrow_ _pendota-disabled-arrow_" title="Move to child element"></i></span></div>
     </div>
     <div class="_pendota_form-group_">
       <table width="100%">
         <tr>
-          <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_type-result_" data-attr="type" data-rawvalue="" value=""
+          <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_type-result_" data-attr="type" data-rawvalue="" value="" title=""
               readonly></td>
           <td width="2%">&nbsp;</td>
           <td width="8%" class="_pendota_input-row_">
-            <div data-id='_pendota_type-result_' class="_pendota-addtobuild-btn_">
+            <div data-id='_pendota_type-result_' class="_pendota-addtobuild-btn_" title="Add to tag">
               <a href="#"><img class="_pendota-addtobuild-icon_"></a>
             </div>
           </td>
           <td width="8%" class="_pendota_input-row_">
-            <div data-id='_pendota_type-result_' class="_pendota-copy-link_">
+            <div data-id='_pendota_type-result_' class="_pendota-copy-link_" title="Copy value">
               <a href="#"><img class="_pendota-copy-icon_"></a>
             </div>
           </td>
@@ -63,16 +63,16 @@
       <div class="_pendota_form-group_">
         <table width="100%">
           <tr>
-            <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_id-result_" data-attr="id" data-rawvalue="" value="#"
+            <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_id-result_" data-attr="id" data-rawvalue="" value="#" title=""
                 readonly></td>
             <td width="2%">&nbsp;</td>
             <td width="8%" class="_pendota_input-row_">
-              <div data-id='_pendota_id-result_' class="_pendota-addtobuild-btn_">
+              <div data-id='_pendota_id-result_' class="_pendota-addtobuild-btn_" title="Add to tag">
                 <a href="#"><img class="_pendota-addtobuild-icon_"></a>
               </div>
             </td>
             <td width="8%" class="_pendota_input-row_">
-              <div data-id='_pendota_id-result_' class="_pendota-copy-link_">
+              <div data-id='_pendota_id-result_' class="_pendota-copy-link_" title="Copy value">
                 <a href="#"><img class="_pendota-copy-icon_"></a>
               </div>
             </td>
@@ -86,15 +86,15 @@
         <table width="100%">
           <tr>
             <td width="82%" class="_pendota_input-row_"><input no-drag class="_pendota_form-control_ _pendota_class-result_"
-                type="text" id="_pendota_class-result-0_" data-attr="class" data-rawvalue="" value="." readonly></td>
+                type="text" id="_pendota_class-result-0_" data-attr="class" data-rawvalue="" value="." title="" readonly></td>
             <td width="2%" class="_pendota_input-row_">&nbsp;</td>
             <td width="8%" class="_pendota_input-row_">
-              <div data-id='_pendota_class-result-0_' class="_pendota-addtobuild-btn_">
+              <div data-id='_pendota_class-result-0_' class="_pendota-addtobuild-btn_" title="Add to tag">
                 <a href="#"><img class="_pendota-addtobuild-icon_"></a>
               </div>
             </td>
             <td width="8%" class="_pendota_input-row_">
-              <div data-id='_pendota_class-result-0_' class="_pendota-copy-link_">
+              <div data-id='_pendota_class-result-0_' class="_pendota-copy-link_" title="Copy value">
                 <a href="#"><img class="_pendota-copy-icon_"></a>
               </div>
             </td>
