--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -1,4 +1,4 @@
-<div id="_pendota-wrapper_">
+<div class="_pendota-wrapper_">
   <div class="_pendota_container_ _pendota-draggable_" id="_pendota-tag-assistant_">
     <div id="_pendota_exit_img_container_"><span id="_pendota_exit_img_">&times;</span></div>
     <div id="_pendota_header-div_">
