3 new rules working in tag builder

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -26,8 +26,8 @@
     <div class="_pendota-form-group_">
       <table id="_pendota-tag-builder-table_" width="100%">
         <tr>
-          <td width="75%"><div id="_pendota-tag-builder_"><div id="_pendota-auto-tags_"></div><form id="_pendota-sizzler-form_" class="_pendota-hidden_"><input no-drag class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form></div>
-          <td width="10%" id="_pendota-sizzler-count_"> -- </td>
+          <td width="75%"><div id="_pendota-tag-builder_"><div id="_pendota-auto-tags_"></div><div id="_pendota-tag-builder-placeholder_">Click a [+] to start building a tag...</div><form id="_pendota-sizzler-form_" class="_pendota-hidden_"><input no-drag class="_pendota_form-control_" type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></form></div>
+          <td width="10%"><div id="_pendota-sizzler-count_"> -- </div></td>
           <td width="15%">
               <a href="#" id="_pendota-sizzler-icon_">Test</a>
           </td>
@@ -39,7 +39,7 @@
       <h5 class="_pendota_">Element Type:</h5>
       <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_"><i data-feather="arrow-up" id="_pendota-feather-up-arrow_" class="_pendota-parent-arrow_ _pendota-active-arrow_" title="Move to parent element"></i></span><span id="_pendota-parent-down_" class="_pendota-hide-arrow_"><i id="_pendota-feather-down-arrow_" data-feather="arrow-down" class="_pendota-parent-arrow_ _pendota-disabled-arrow_" title="Move to child element"></i></span></div>
     </div>
-    <div class="_pendota_form-group_">
+    <div id="_pendota-element-details_">
       <table width="100%">
         <tr>
           <td width="82%"><input no-drag class="_pendota_form-control_" type="text" id="_pendota_type-result_" data-attr="type" data-rawvalue="" value="" title=""
