changed unlock UX removed text about keyboard shortcut (doesn't work) only unlocks on lock icon click now

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -12,13 +12,13 @@
       </table>
       <table width="100%">
         <tr>
-          <td width="5%">
-            <div id="_pendota-lock-icon_" class="_pendota-icon-locked_">
-              <i class="_pendota-feather-locked_" data-feather="unlock"></i>
+          <td>
+            <div id = "_pendota-status_">
+              <div id="_pendota-lock-icon_" class="_pendota-icon-locked_">
+                <i class="_pendota-feather-locked_" data-feather="unlock"></i>
+              </div>
+              <div id="_pendota_lock-message_">Click anywhere to Lock.</div>
             </div>
-          </td>
-          <td width="90%">
-            <div id="_pendota_status_"></div>
           </td>
         </tr>
       </table>
