--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -48,7 +48,7 @@
         <tr id="_pendota-tag-builder-buttons_">
           <td width="12%">
             <a href="javascript:void(0);" id="_pendota-free-text-btn_" class="_pendota-button_ _pendota-tag-builder-button_"
-              title="Free text tag"><i id="_pendota-free-text-icon_" class="_pendota-button-icon_"
+              title="Free text"><i id="_pendota-free-text-icon_" class="_pendota-button-icon_"
                 data-feather="type"></i></a>
           </td>
           <td width="12%">
