fixed arrows and removed console logging

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -63,10 +63,10 @@
       <div id="_pendota-type-block_">
         <div class="_pendota_row-header_">
           <h5 class="_pendota_">Element Type:</h5>
-          <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_"><i
+          <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_" title="Move to parent element"><i
                 data-feather="arrow-up" id="_pendota-feather-up-arrow_"
-                class="_pendota-parent-arrow_ _pendota-active-arrow_" title="Move to parent element"></i></span><span
-              id="_pendota-parent-down_" class="_pendota-hide-arrow_"><i id="_pendota-feather-down-arrow_"
+                class="_pendota-parent-arrow_ _pendota-active-arrow_" ></i></span><span
+              id="_pendota-parent-down_" class="_pendota-hide-arrow_" title="Move to child element"><i id="_pendota-feather-down-arrow_"
                 data-feather="arrow-down" class="_pendota-parent-arrow_ _pendota-disabled-arrow_"
                 title="Move to child element"></i></span></div>
         </div>
@@ -76,12 +76,6 @@
       <div id="_pendota-text-block_">
         <div class="_pendota_row-header_">
           <h5 class="_pendota_">Element Text:</h5>
-          <div class="_pendota-arrow-block_"><span id="_pendota-parent-up_" class="_pendota-hide-arrow_"><i
-                data-feather="arrow-up" id="_pendota-feather-up-arrow_"
-                class="_pendota-parent-arrow_ _pendota-active-arrow_" title="Move to parent element"></i></span><span
-              id="_pendota-parent-down_" class="_pendota-hide-arrow_"><i id="_pendota-feather-down-arrow_"
-                data-feather="arrow-down" class="_pendota-parent-arrow_ _pendota-disabled-arrow_"
-                title="Move to child element"></i></span></div>
         </div>
         <table id="_pendota_text-table_" width="100%">
         </table>
