--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -75,14 +75,14 @@
       </div>
       <div id="_pendota-text-block_">
         <div class="_pendota_row-header_">
-          <h5 class="_pendota_">Element Text:</h5>
+          <h5 class="_pendota_">Contained Text:</h5>
         </div>
         <table id="_pendota_text-table_" width="100%">
         </table>
       </div>
       <div id="_pendota-id-block_">
         <div class="_pendota_row-header_">
-          <h5 class="_pendota_">Element ID:</h5>
+          <h5 class="_pendota_">ID:</h5>
         </div>
         <div class="_pendota_form-group_">
           <table id="_pendota_id-table_" width="100%">
@@ -91,7 +91,7 @@
       </div>
       <div id="_pendota-class-block_">
         <div class="_pendota_row-header_">
-          <h5 class="_pendota_">Element Class Names:</h5>
+          <h5 class="_pendota_">Class Names:</h5>
         </div>
         <div class="_pendota_form-group_">
           <table width="100%" id="_pendota_class-table_"></table>
@@ -99,7 +99,7 @@
       </div>
       <div id="_pendota-attr-block_">
         <div class="_pendota_row-header_">
-          <h5 class="_pendota_">Element Custom Attributes:</h5>
+          <h5 class="_pendota_">Custom Attributes:</h5>
         </div>
         <div id="_pendota-attr-selector_">
         </div>
