--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -33,7 +33,7 @@
                 <div id="_pendota-tag-builder-placeholder_">Click [+] to start building a tag</div>
               </div>
               <form id="_pendota-sizzler-form_" class="_pendota-hidden_"><textarea no-drag class="_pendota_form-control_"
-                  type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Test a selector..."></textarea>
+                  type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Type a selector..."></textarea>
               </form>
             </div>
           <td width="12%">
